[project]
name = "pw-gen-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
pwdgen = "pw_gen_cli.password_gen:pw_gen"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
